--- a/index.html
+++ b/index.html
@@ -283,9 +283,15 @@
 						<article class="wow fadeInUp"  data-wow-duration="1s" data-wow-delay="0.5s">
 							<a href="#price">
 							<div class="rex-feature-box">
-								<i class="fa fa-usd rex-feature-icon"></i>
+								<i class="fa fa-calculator rex-feature-icon"></i>
 								<h4>Obsługa Podatkowa KPiR</h4>
-								<p>prowadzenie Księgi Przychodów i Rozchodów Klienta <br> ewidencjonowanie kosztów i przychodów <br> prowadzenie rejestrów VAT <br> prowadzenie rejestru środków trwałych <br> wyliczanie należnych podatków (VAT, PIT) i przygotowywanie deklaracji oraz zeznań podatkowych <br> reprezentowanie Klienta w postępowaniach administracyjnych przed Zakładem Ubezpieczeń Społecznych i Urzędami Skarbowymi <br> sporządzanie i przekazywanie do ZUS dokumentów rejestracyjnych i rozliczeniowych</p>
+								<p>- prowadzenie Księgi Przychodów i Rozchodów Klienta 
+								<br>- ewidencjonowanie kosztów i przychodów 
+								<br>- prowadzenie rejestrów VAT 
+								<br>- prowadzenie rejestru środków trwałych 
+								<br>- wyliczanie należnych podatków (VAT, PIT) i przygotowywanie deklaracji oraz zeznań podatkowych 
+								<br>- reprezentowanie Klienta w postępowaniach administracyjnych przed Zakładem Ubezpieczeń Społecznych i Urzędami Skarbowymi 
+								<br>- sporządzanie i przekazywanie do ZUS dokumentów rejestracyjnych i rozliczeniowych</p>
 							</div><!--/rex-feature-box-->
 							</a>
 						</article>
@@ -296,7 +302,14 @@
 							<div class="rex-feature-box">
 								<i class="fa fa-users rex-feature-icon"></i>
 								<h4>Obsługa Kadrowo-Płacowa</h4>
-								<p>sporządzanie list płac <br> sporządzanie imiennych raportów ubezpieczonych RMUA <br> naliczanie składek pracowników i sporządzanie deklaracji ZUS <br> rozliczanie podatku dochodowego pracowników oraz sporządzanie informacji rocznych o uzyskanych dochodach (PIT-8A, PIT-11, PIT-40) <br> prowadzenie akt personalnych pracowników <br> monitorowanie terminów badań okresowych oraz obligatoryjnych szkoleń BHP pracowników <br> raportowanie stanów wykorzystania urlopów <br> pomoc w organizacji szkoleń BHP</p>
+								<p>- sporządzanie list płac 
+								<br>- sporządzanie imiennych raportów ubezpieczonych RMUA 
+								<br>- naliczanie składek pracowników i sporządzanie deklaracji ZUS 
+								<br>- rozliczanie podatku dochodowego pracowników oraz sporządzanie informacji rocznych o uzyskanych dochodach (PIT-8A, PIT-11, PIT-40) 
+								<br>- prowadzenie akt personalnych pracowników 
+								<br>- monitorowanie terminów badań okresowych oraz obligatoryjnych szkoleń BHP pracowników 
+								<br>- raportowanie stanów wykorzystania urlopów 
+								<br>- pomoc w organizacji szkoleń BHP</p>
 							</div><!--/rex-feature-box-->	
 							</a>
 						</article>
@@ -305,9 +318,20 @@
 						<article class="wow fadeInUp"  data-wow-duration="1.4s" data-wow-delay="0.7s">
 							<a href="#price">
 							<div class="rex-feature-box">
-								<i class="fa fa-building rex-feature-icon"></i>
-								<h4>Obsługa ewidencji ryczałtowych</h4>
-								<p>ewidencje podatku od towarów i usług VAT <br> rozliczenia z Urzędami Skarbowymi <br> rozliczenia właścicieli z Zakładem Ubezpieczeń Społecznych</p>
+								<i class="fa fa-book rex-feature-icon"></i>
+								<h4>Księgi rachunkowe</h4>
+								<p>- ewidencja dokumentów źródłowych w księgach rachunkowych 
+								<br>- ewidencja dokumentów źródłowych w rejestrach dla celów podatku od towarów i usług 
+								<br>- sporządzanie deklaracji VAT
+								<br>- prowadzenie ewidencji środków trwałych i wartości niematerialnych i prawnych
+								<br>- bieżące dekretowanie i księgowanie raportów kasowych i wyciągów bankowych;
+								<br>- potwierdzanie sald;
+								<br>- rozliczanie delegacji służbowych;
+								<br>- obliczanie zaliczek na podatek dochodowy;
+								<br>- przygotowanie planu kont wraz z polityką rachunkowości;
+								<br>- sporządzanie sprawozdań finansowych oraz sprawozdań dla celów statystycznych;
+								<br>- aktualizacja i rejestracja danych firmowych;
+								<br>- sporządzanie bilansu i rachunku zysków i strat na koniec każdego roku podatkowego oraz zeznania rocznego CIT-8.</p>
 							</div><!--/rex-feature-box-->	
 							</a>
 						</article>
@@ -480,7 +504,7 @@ Wychodząc naprzeciw aby stworzyć kompleksowe usługi w jednym miejscu posatnow
 					<!-- top lawyer description -->
 					<div class="rex-team-content wow fadeInUp"  data-wow-duration="1" data-wow-delay="0.8s">
 						<div class="rex-team-text">
-							<h4>STANISLAW CWYNAR</h4>
+							<h4>STANISŁAW CWYNAR</h4>
 							<h5>GŁÓWNY KSIĘGOWY, WSPÓŁWŁAŚCICIEL, V-CE PREZES ODDZIAŁU RZESZÓW</h5>
 							<p>Firma od 2012 zajmująca sie rozliczaniem czasu pracy kierowców, wynagrodzen, płac minimalnych w krajach UE. Usługi skierowane do branży transportowej. 
 Od tego czasu współpracuję z Ekspert sp.zoo, która kompleskowo wspomagała nas w sprawach ksiegowo finansowych. 
