nowe opinie klientow, wydluzenie linii z kropkami pod opiniami

--- a/index.html
+++ b/index.html
@@ -99,10 +99,7 @@
                     </li> -->
                     <li>
                       <a href="#about">O nas</a>
-                    </li>
-					<li>
-                      <a href="#rzeszow">o. Rzeszów</a>
-                    </li>
+                    </li>					
                     <li>
                       <a href="#feature">Oferta</a>
                     </li>
@@ -798,15 +795,27 @@ zespołów muzycznych.</p>
 						  </div>
 						  <!-- end -->
 
-						  <!--<div class="rx-active">
+						  <div class="rx-active">
 						  	<!-- testimonial img -->
-							<!--	<div class="rex-content-img">
+								<div class="rex-content-img">
 									<img src="img/rex-testimonial-img-3.png" alt="">
 								</div>
 								<!-- End testimonial img -->
 
-							<!--	<h4><span>klient 3, firma 3</span></h4>
+								<h4><span>klient 3, firma 3</span></h4>
 								<p>Jeśli ktoś chce spać spokojnie, to niech powierzy księgowość Ekspertowi :) Korzystam z ich usług i jestem zadowolona – mogę zająć się innymi ważnymi sprawami dla mojej firmy, zamiast głowić się nad księgowymi niuansami. Pani Ewa bardzo miła i zawsze przypomni o zbliżających się terminach!</p>
+						  </div>
+						  <!-- end -->
+						  
+						  <div class="rx-active">
+						  	<!-- testimonial img -->
+								<div class="rex-content-img">
+									<img src="img/rex-testimonial-img-3.png" alt="">
+								</div>
+								<!-- End testimonial img -->
+
+								<h4><span>klient 4, firma 4</span></h4>
+								<p>Wszystko realizowane terminowo, zgodnie z zaleceniami i bez uchybień. Polecam.</p>
 						  </div>
 						  <!-- end -->
  
@@ -822,6 +831,91 @@ zespołów muzycznych.</p>
 						  </div>
 						  <!-- end -->
 
+						  <div class="rx-active">
+						  	<!-- testimonial img -->
+								<div class="rex-content-img">
+									<img src="img/rex-testimonial-img-3.png" alt="">
+								</div>
+								<!-- End testimonial img -->
+
+								<h4><span>klient 5, firma 5</span></h4>
+								<p>Polecam usługi biura rachunkowego Ekspert wszystkim, którzy cenią sobie wysoką jakość usług w przystępnej cenie. Jestem początkującym przedsiębiorcą i współpraca z biurem Ekspert, w szczególności w pierwszych miesiącach działalności, bardzo mi pomogła, bo poza fachową obsługą dostałam też wiele przydatnych informacji.</p>
+						  </div>
+						  <!-- end -->
+ 
+						  <div class="rx-active">
+						  	<!-- testimonial img -->
+								<div class="rex-content-img">
+									<img src="img/rex-testimonial-img-3.png" alt="">
+								</div>
+								<!-- End testimonial img -->
+
+								<h4><span>klient 6, firma 6</span></h4>
+								<p>Na skorzystanie z usług biura Ekspert zdecydowałem się, ponieważ nie byłem zadowolony z usług poprzedniej księgowej. Myślę, że tutaj zostanę na dłużej.</p>
+						  </div>
+						  <!-- end -->
+ 
+						  <div class="rx-active">
+						  	<!-- testimonial img -->
+								<div class="rex-content-img">
+									<img src="img/rex-testimonial-img-3.png" alt="">
+								</div>
+								<!-- End testimonial img -->
+
+								<h4><span>klient 7, firma 7</span></h4>
+								<p>Wszystko w jak najlepszym porządku. Z Ekspertem współpracowałem w swojej poprzedniej firmie. Teraz przeniosłem się do większego przedsiębiorstwa i również tutaj Ekspert daje radę. Polecam dla MSP i dużych firm.</p>
+						  </div>
+						  <!-- end -->
+ 
+						  <div class="rx-active">
+						  	<!-- testimonial img -->
+								<div class="rex-content-img">
+									<img src="img/rex-testimonial-img-3.png" alt="">
+								</div>
+								<!-- End testimonial img -->
+
+								<h4><span>klient 8, firma 8</span></h4>
+								<p>Przez lata korzystałem z usług różnych biur rachunkowych, od niektórych historii aż się włos na głowie jeży… Od 2017 jestem u Eksperta i wszystko jest OK.</p>
+						  </div>
+						  <!-- end -->
+ 
+						  <div class="rx-active">
+						  	<!-- testimonial img -->
+								<div class="rex-content-img">
+									<img src="img/rex-testimonial-img-3.png" alt="">
+								</div>
+								<!-- End testimonial img -->
+
+								<h4><span>klient 9, firma 9</span></h4>
+								<p>Dla wszystkich, którzy w dobrej cenie szukają księgowego z wiedzą i doświadczeniem. Mogę polecić z czystym sumieniem.</p>
+						  </div>
+						  <!-- end -->
+ 
+						  <div class="rx-active">
+						  	<!-- testimonial img -->
+								<div class="rex-content-img">
+									<img src="img/rex-testimonial-img-3.png" alt="">
+								</div>
+								<!-- End testimonial img -->
+
+								<h4><span>klient 10, firma 10</span></h4>
+								<p>Do Eksperta trafiłem bardzo zdenerwowany, ponieważ poprzedni księgowy więcej zepsuł, niż pomógł. Przez jego błędy mogłem ponieść bardzo poważne konsekwencje. Na szczęście w Ekspercie udzielono mi pomocy. Wiele spraw udało się jakoś odkręcić. Nie chcę myśleć, co by było, gdybym tu nie trafił. Polecam. Warto!</p>
+						  </div>
+						  <!-- end -->
+ 
+						  <div class="rx-active">
+						  	<!-- testimonial img -->
+								<div class="rex-content-img">
+									<img src="img/rex-testimonial-img-3.png" alt="">
+								</div>
+								<!-- End testimonial img -->
+
+								<h4><span>klient 11, firma 11</span></h4>
+								<p>Dobry przepływ informacji, kontakt z klientem na wysokim poziomie i mobilność – tak mogę opisać poziom usług biura Ekspert. To ważne, gdy prowadzi się własny biznes i wszystko musi być na czas i na już.</p>
+						  </div>
+						  <!-- end -->
+ 
+						  
 						 <div class="rx-active">
 						  	<!-- testimonial img -->
 								<div class="rex-content-img">
