opinie klientow - zimir

--- a/index.html
+++ b/index.html
@@ -798,11 +798,11 @@ zespołów muzycznych.</p>
 						  <div class="rx-active">
 						  	<!-- testimonial img -->
 								<div class="rex-content-img">
-									<img src="img/rex-testimonial-img-3.png" alt="">
+									<img src="img/rex-testimonial-img-zimir.png" alt="">
 								</div>
 								<!-- End testimonial img -->
 
-								<h4><span>klient 3, firma 3</span></h4>
+								<h4><span>Bohdan Rydnych, ZIMIR Sp. z o.o.</span></h4>
 								<p>Jeśli ktoś chce spać spokojnie, to niech powierzy księgowość Ekspertowi :) Korzystam z ich usług i jestem zadowolona – mogę zająć się innymi ważnymi sprawami dla mojej firmy, zamiast głowić się nad księgowymi niuansami. Pani Ewa bardzo miła i zawsze przypomni o zbliżających się terminach!</p>
 						  </div>
 						  <!-- end -->
