opinie klientow, usuniecie linii

--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@ zespołów muzycznych.</p>
 					<div class="rex-team-content wow fadeInUp"  data-wow-duration="1" data-wow-delay="0.8s">
 						<div class="rex-team-text">
 							<h4>Jakub Pels</h4>
-							<h5>Specjalista RODO</h5>
+							<h5>Specjalista RODO, BHP</h5>
 							<p>Moje życie zawodowe jest od dłuższego czasu związane z BHP. Jestem specjalistą w tej dziedzinie i ramach założonej w 2013 roku działalności, przeprowadzam szkolenia w dużych i mniejszych firmach, zarówno dla pracowników jak i pracodawców. W dzisiejszych czasach niezwykle istotne jest dbanie o dane osobowe, które są dużą wartością dla każdego człowieka, dlatego postanowiłem rozwinąć się także w tym kierunku. W czerwcu 2018 roku, ukończyłem kurs organizowany przez BDO Academy i zostałem certyfikowanym inspektorem ochrony danych osobowych, w kontekście zmian w prawie, które zaszły w tymże roku i związane są z ustawą RODO. Znam się na zasadach przetwarzania danych osobowych, na polityce bezpieczeństwa informacji czy na analizie zagrożeń i ryzyka związanych z wymianą danych. W 2018 zostałem specjalistą od RODO w Biurze Rachunkowym Ekspert.</p>
 							<img class="coffie" src="img/coffie.png" alt="">							
 							<div class="lawyer-social-media">
@@ -772,7 +772,7 @@ zespołów muzycznych.</p>
 						<div id="rex-testimonial" class="owl-carousel">
 						  <div class="rx-active">
 						  	<!-- testimonial img -->
-								<div class="rex-content-img">
+								<!--<div class="rex-content-img">
 									<img src="img/rex-testimonial-img-1.png" alt="">
 								</div>
 								<!-- End testimonial img -->
@@ -785,7 +785,7 @@ zespołów muzycznych.</p>
 
 						  <div class="rx-active">
 						  	<!-- testimonial img -->
-								<div class="rex-content-img">
+								<!--<div class="rex-content-img">
 									<img src="img/rex-testimonial-img-2.jpg" alt="">
 								</div>
 								<!-- End testimonial img -->
@@ -797,7 +797,7 @@ zespołów muzycznych.</p>
 
 						  <div class="rx-active">
 						  	<!-- testimonial img -->
-								<div class="rex-content-img">
+								<!--<div class="rex-content-img">
 									<img src="img/rex-testimonial-img-zimir.png" alt="">
 								</div>
 								<!-- End testimonial img -->
@@ -809,19 +809,19 @@ zespołów muzycznych.</p>
 						  
 						  <div class="rx-active">
 						  	<!-- testimonial img -->
-								<div class="rex-content-img">
+								<!--<div class="rex-content-img">
 									<img src="img/rex-testimonial-img-3.png" alt="">
 								</div>
 								<!-- End testimonial img -->
 
-								<h4><span>klient 4, firma 4</span></h4>
+								<h4><span>Ihor stukanenko, Vitrans Sp. z o.o.</span></h4>
 								<p>Wszystko realizowane terminowo, zgodnie z zaleceniami i bez uchybień. Polecam.</p>
 						  </div>
 						  <!-- end -->
  
 						  <div class="rx-active">
 						  	<!-- testimonial img -->
-								<div class="rex-content-img">
+								<!--<div class="rex-content-img">
 									<img src="img/rex-testimonial-img-4.png" alt="">
 								</div>
 								<!-- End testimonial img -->
@@ -833,84 +833,84 @@ zespołów muzycznych.</p>
 
 						  <div class="rx-active">
 						  	<!-- testimonial img -->
-								<div class="rex-content-img">
+								<!--<div class="rex-content-img">
 									<img src="img/rex-testimonial-img-3.png" alt="">
 								</div>
 								<!-- End testimonial img -->
 
-								<h4><span>klient 5, firma 5</span></h4>
+								<h4><span>Taras Gaydyshchuk, Interstar</span></h4>
 								<p>Polecam usługi biura rachunkowego Ekspert wszystkim, którzy cenią sobie wysoką jakość usług w przystępnej cenie. Jestem początkującym przedsiębiorcą i współpraca z biurem Ekspert, w szczególności w pierwszych miesiącach działalności, bardzo mi pomogła, bo poza fachową obsługą dostałam też wiele przydatnych informacji.</p>
 						  </div>
 						  <!-- end -->
  
-						  <div class="rx-active">
+						  <!--<div class="rx-active">
 						  	<!-- testimonial img -->
-								<div class="rex-content-img">
+								<!--<div class="rex-content-img">
 									<img src="img/rex-testimonial-img-3.png" alt="">
 								</div>
 								<!-- End testimonial img -->
 
-								<h4><span>klient 6, firma 6</span></h4>
+								<!--<h4><span>klient 6, firma 6</span></h4>
 								<p>Na skorzystanie z usług biura Ekspert zdecydowałem się, ponieważ nie byłem zadowolony z usług poprzedniej księgowej. Myślę, że tutaj zostanę na dłużej.</p>
 						  </div>
 						  <!-- end -->
  
-						  <div class="rx-active">
+						  <!-- <div class="rx-active">
 						  	<!-- testimonial img -->
-								<div class="rex-content-img">
+								<!-- <div class="rex-content-img">
 									<img src="img/rex-testimonial-img-3.png" alt="">
 								</div>
 								<!-- End testimonial img -->
 
-								<h4><span>klient 7, firma 7</span></h4>
+								<!-- <h4><span>klient 7, firma 7</span></h4>
 								<p>Wszystko w jak najlepszym porządku. Z Ekspertem współpracowałem w swojej poprzedniej firmie. Teraz przeniosłem się do większego przedsiębiorstwa i również tutaj Ekspert daje radę. Polecam dla MSP i dużych firm.</p>
 						  </div>
 						  <!-- end -->
  
-						  <div class="rx-active">
+						  <!-- <div class="rx-active">
 						  	<!-- testimonial img -->
-								<div class="rex-content-img">
+								<!-- <div class="rex-content-img">
 									<img src="img/rex-testimonial-img-3.png" alt="">
 								</div>
 								<!-- End testimonial img -->
 
-								<h4><span>klient 8, firma 8</span></h4>
+								<!-- <h4><span>klient 8, firma 8</span></h4>
 								<p>Przez lata korzystałem z usług różnych biur rachunkowych, od niektórych historii aż się włos na głowie jeży… Od 2017 jestem u Eksperta i wszystko jest OK.</p>
 						  </div>
 						  <!-- end -->
  
 						  <div class="rx-active">
 						  	<!-- testimonial img -->
-								<div class="rex-content-img">
+								<!--<div class="rex-content-img">
 									<img src="img/rex-testimonial-img-3.png" alt="">
 								</div>
 								<!-- End testimonial img -->
 
-								<h4><span>klient 9, firma 9</span></h4>
+								<h4><span>Grzegorz Gniewek, Gregtrans</span></h4>
 								<p>Dla wszystkich, którzy w dobrej cenie szukają księgowego z wiedzą i doświadczeniem. Mogę polecić z czystym sumieniem.</p>
 						  </div>
 						  <!-- end -->
  
-						  <div class="rx-active">
+						  <!-- <div class="rx-active">
 						  	<!-- testimonial img -->
-								<div class="rex-content-img">
+								<!-- <div class="rex-content-img">
 									<img src="img/rex-testimonial-img-3.png" alt="">
 								</div>
 								<!-- End testimonial img -->
 
-								<h4><span>klient 10, firma 10</span></h4>
+								<!-- <h4><span>klient 10, firma 10</span></h4>
 								<p>Do Eksperta trafiłem bardzo zdenerwowany, ponieważ poprzedni księgowy więcej zepsuł, niż pomógł. Przez jego błędy mogłem ponieść bardzo poważne konsekwencje. Na szczęście w Ekspercie udzielono mi pomocy. Wiele spraw udało się jakoś odkręcić. Nie chcę myśleć, co by było, gdybym tu nie trafił. Polecam. Warto!</p>
 						  </div>
 						  <!-- end -->
  
 						  <div class="rx-active">
 						  	<!-- testimonial img -->
-								<div class="rex-content-img">
+								<!--<div class="rex-content-img">
 									<img src="img/rex-testimonial-img-3.png" alt="">
 								</div>
 								<!-- End testimonial img -->
 
-								<h4><span>klient 11, firma 11</span></h4>
+								<h4><span>Vasyl Bukatar, Buk-Trans Sp. z o.o.</span></h4>
 								<p>Dobry przepływ informacji, kontakt z klientem na wysokim poziomie i mobilność – tak mogę opisać poziom usług biura Ekspert. To ważne, gdy prowadzi się własny biznes i wszystko musi być na czas i na już.</p>
 						  </div>
 						  <!-- end -->
@@ -918,12 +918,12 @@ zespołów muzycznych.</p>
 						  
 						 <div class="rx-active">
 						  	<!-- testimonial img -->
-								<div class="rex-content-img">
+								<!-- <div class="rex-content-img">
 									<img src="img/rex-testimonial-img-5.png" alt="">
 								</div>
 								<!-- End testimonial img -->
 
-								<h4><span>Mateusz Blaszkiewicz, Software Walk</span></h4>
+								<h4><span>Łukasz Gerek, MK Soft</span></h4>
 								<p>Przyjazne, kompetentne i cierpliwe, odpowiadają nawet na banalne pytania i kompleksowo pomagają, nie tylko w księgowaniu. Kompleksowo otaczają opieka w sprawach księgowych :) Polecam serdecznie!</p>
 						  </div>
 						  <!-- end -->
