ustawienie oferty, fotki w opiniach

--- a/index.html
+++ b/index.html
@@ -336,6 +336,28 @@ Dlatego, by zapewnić kompleksową obsługę firm transportowych, oferujemy szer
 						<!--</article>
 					  </div> -->
 					  <div class="item col-md-4">
+						<article class="wow fadeInUp"  data-wow-duration="1.4s" data-wow-delay="0.7s">
+							<a href="#price">
+							<div class="rex-feature-box">
+								<i class="fa fa-book rex-feature-icon"></i>
+								<h4>Księgi rachunkowe</h4>
+								<p>- ewidencja dokumentów źródłowych w księgach rachunkowych 
+								<br>- ewidencja dokumentów źródłowych w rejestrach dla celów podatku od towarów i usług 
+								<br>- sporządzanie deklaracji VAT
+								<br>- prowadzenie ewidencji środków trwałych i wartości niematerialnych i prawnych
+								<br>- bieżące dekretowanie i księgowanie raportów kasowych i wyciągów bankowych;
+								<br>- potwierdzanie sald;
+								<br>- rozliczanie delegacji służbowych;
+								<br>- obliczanie zaliczek na podatek dochodowy;
+								<br>- przygotowanie planu kont wraz z polityką rachunkowości;
+								<br>- sporządzanie sprawozdań finansowych oraz sprawozdań dla celów statystycznych;
+								<br>- aktualizacja i rejestracja danych firmowych;
+								<br>- sporządzanie bilansu i rachunku zysków i strat na koniec każdego roku podatkowego oraz zeznania rocznego CIT-8.</p>
+							</div><!--/rex-feature-box-->	
+							</a>
+						</article>
+					  </div>
+					  <div class="item col-md-4">
 						<article class="wow fadeInUp"  data-wow-duration="1s" data-wow-delay="0.5s">
 							<a href="#price">
 							<div class="rex-feature-box">
@@ -370,28 +392,7 @@ Dlatego, by zapewnić kompleksową obsługę firm transportowych, oferujemy szer
 							</a>
 						</article>
 					  </div>
-					  <div class="item col-md-4">
-						<article class="wow fadeInUp"  data-wow-duration="1.4s" data-wow-delay="0.7s">
-							<a href="#price">
-							<div class="rex-feature-box">
-								<i class="fa fa-book rex-feature-icon"></i>
-								<h4>Księgi rachunkowe</h4>
-								<p>- ewidencja dokumentów źródłowych w księgach rachunkowych 
-								<br>- ewidencja dokumentów źródłowych w rejestrach dla celów podatku od towarów i usług 
-								<br>- sporządzanie deklaracji VAT
-								<br>- prowadzenie ewidencji środków trwałych i wartości niematerialnych i prawnych
-								<br>- bieżące dekretowanie i księgowanie raportów kasowych i wyciągów bankowych;
-								<br>- potwierdzanie sald;
-								<br>- rozliczanie delegacji służbowych;
-								<br>- obliczanie zaliczek na podatek dochodowy;
-								<br>- przygotowanie planu kont wraz z polityką rachunkowości;
-								<br>- sporządzanie sprawozdań finansowych oraz sprawozdań dla celów statystycznych;
-								<br>- aktualizacja i rejestracja danych firmowych;
-								<br>- sporządzanie bilansu i rachunku zysków i strat na koniec każdego roku podatkowego oraz zeznania rocznego CIT-8.</p>
-							</div><!--/rex-feature-box-->	
-							</a>
-						</article>
-					  </div>
+					  
 					</div>
 				</div>
 			</div>
@@ -772,7 +773,7 @@ zespołów muzycznych.</p>
 						<div id="rex-testimonial" class="owl-carousel">
 						  <div class="rx-active">
 						  	<!-- testimonial img -->
-								<!--<div class="rex-content-img">
+								<div class="rex-content-img">
 									<img src="img/rex-testimonial-img-1.png" alt="">
 								</div>
 								<!-- End testimonial img -->
@@ -785,7 +786,7 @@ zespołów muzycznych.</p>
 
 						  <div class="rx-active">
 						  	<!-- testimonial img -->
-								<!--<div class="rex-content-img">
+								<div class="rex-content-img">
 									<img src="img/rex-testimonial-img-2.jpg" alt="">
 								</div>
 								<!-- End testimonial img -->
@@ -797,7 +798,7 @@ zespołów muzycznych.</p>
 
 						  <div class="rx-active">
 						  	<!-- testimonial img -->
-								<!--<div class="rex-content-img">
+								<div class="rex-content-img">
 									<img src="img/rex-testimonial-img-zimir.png" alt="">
 								</div>
 								<!-- End testimonial img -->
@@ -821,7 +822,7 @@ zespołów muzycznych.</p>
  
 						  <div class="rx-active">
 						  	<!-- testimonial img -->
-								<!--<div class="rex-content-img">
+								<div class="rex-content-img">
 									<img src="img/rex-testimonial-img-4.png" alt="">
 								</div>
 								<!-- End testimonial img -->
@@ -918,12 +919,12 @@ zespołów muzycznych.</p>
 						  
 						 <div class="rx-active">
 						  	<!-- testimonial img -->
-								<!-- <div class="rex-content-img">
+								<div class="rex-content-img">
 									<img src="img/rex-testimonial-img-5.png" alt="">
 								</div>
 								<!-- End testimonial img -->
 
-								<h4><span>Łukasz Gerek, MK Soft</span></h4>
+								<h4><span>Łukasz Gerek, MK-Soft</span></h4>
 								<p>Przyjazne, kompetentne i cierpliwe, odpowiadają nawet na banalne pytania i kompleksowo pomagają, nie tylko w księgowaniu. Kompleksowo otaczają opieka w sprawach księgowych :) Polecam serdecznie!</p>
 						  </div>
 						  <!-- end -->
