literowka w opinii bogdan, zimir

--- a/index.html
+++ b/index.html
@@ -804,7 +804,7 @@ zespołów muzycznych.</p>
 								<!-- End testimonial img -->
 
 								<h4><span>Bohdan Rydnych, ZIMIR Sp. z o.o.</span></h4>
-								<p>Jeśli ktoś chce spać spokojnie, to niech powierzy księgowość Ekspertowi :) Korzystam z ich usług i jestem zadowolona – mogę zająć się innymi ważnymi sprawami dla mojej firmy, zamiast głowić się nad księgowymi niuansami. Pani Ewa bardzo miła i zawsze przypomni o zbliżających się terminach!</p>
+								<p>Jeśli ktoś chce spać spokojnie, to niech powierzy księgowość Ekspertowi :) Korzystam z ich usług i jestem zadowolony – mogę zająć się innymi ważnymi sprawami dla mojej firmy, zamiast głowić się nad księgowymi niuansami. Pani Ewa bardzo miła i zawsze przypomni o zbliżających się terminach!</p>
 						  </div>
 						  <!-- end -->
 						  
