nowe zdjecie klienta, gniewek

--- a/index.html
+++ b/index.html
@@ -882,8 +882,8 @@ zespołów muzycznych.</p>
  
 						  <div class="rx-active">
 						  	<!-- testimonial img -->
-								<!--<div class="rex-content-img">
-									<img src="img/rex-testimonial-img-3.png" alt="">
+								<div class="rex-content-img">
+									<img src="img/rex-testimonial-img-6.jpg" alt="">
 								</div>
 								<!-- End testimonial img -->
 
