popraw literowki w opinii klienta

--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@ zespołów muzycznych.</p>
 								<!-- End testimonial img -->
 
 								<h4><span>Taras Gaydyshchuk, Interstar</span></h4>
-								<p>Polecam usługi biura rachunkowego Ekspert wszystkim, którzy cenią sobie wysoką jakość usług w przystępnej cenie. Jestem początkującym przedsiębiorcą i współpraca z biurem Ekspert, w szczególności w pierwszych miesiącach działalności, bardzo mi pomogła, bo poza fachową obsługą dostałam też wiele przydatnych informacji.</p>
+								<p>Polecam usługi biura rachunkowego Ekspert wszystkim, którzy cenią sobie wysoką jakość usług w przystępnej cenie. Jestem początkującym przedsiębiorcą i współpraca z biurem Ekspert, w szczególności w pierwszych miesiącach działalności, bardzo mi pomogła, bo poza fachową obsługą dostałem też wiele przydatnych informacji.</p>
 						  </div>
 						  <!-- end -->
  
