nowe logo - primosole

--- a/index.html
+++ b/index.html
@@ -941,7 +941,7 @@ zespołów muzycznych.</p>
 				<h3>Zaufali nam</h3>
 			</div>
 			<div class="row">
-				<div class="col-md-12">
+				<div class="col-md-12" >
 					<!-- clients logo area -->
 					<div id="rex-Client" class="owl-carousel">
 					  <div class="rex-client-logo">
@@ -953,6 +953,9 @@ zespołów muzycznych.</p>
 					  <div class="rex-client-logo">
 					  	<img src="img/client-logo-3.png" alt="">
 					  </div>
+					  <div style="width: 289px;" class="rex-client-logo">
+					  	<img src="img/client-logo-7.png" alt="">
+					  </div>
 					  <div class="rex-client-logo">
 					  	<img src="img/client-logo-4.png" alt="">
 					  </div>
@@ -961,10 +964,7 @@ zespołów muzycznych.</p>
 					  </div>
 					  <div class="rex-client-logo">
 					  	<img src="img/client-logo-6.png" alt="">
-					  </div>
-					  <div class="rex-client-logo">
-					  	<img src="img/client-logo-7.png" alt="">
-					  </div>
+					  </div>					  
 					  <div class="rex-client-logo">
 					  	<img src="img/client-logo-8.png" alt="">
 					  </div>
