--- a/index.html
+++ b/index.html
@@ -1089,8 +1089,8 @@ zespołów muzycznych.</p>
 	                    <h3 class="rex-table-title">Pakiet Basic</h3>
 	                    <div class="rex-pricing-price"><span class="pricing__currency">PLN</span>150<span class="pricing__period">/ miesięcznie</span></div>
 	                    <ul class="rex-pricing-feature-list">
-	                        <li class="rex-pricing-feature">20 dokumentów</li>
-	                        <li class="rex-pricing-feature">1 pracownik</li>
+	                        <li class="rex-pricing-feature">5 dokumentów</li>
+	                        <li class="rex-pricing-feature">bez pracowników</li>
 	                       <!-- <li class="rex-pricing-feature">Forum access</li>
 	                        <li class="rex-pricing-feature">Support at $25/hour</li> -->
 	                    </ul>
@@ -1103,10 +1103,10 @@ zespołów muzycznych.</p>
 	                <div class="rex-table-content">
 		                <i class="fa fa-balance-scale"></i>
 	                    <h3 class="rex-table-title">Pakiet Standard</h3>
-	                    <div class="rex-pricing-price"><span class="pricing__currency">PLN</span>290<span class="pricing__period">/ miesięcznie</span></div>
+	                    <div class="rex-pricing-price"><span class="pricing__currency">PLN</span>250<span class="pricing__period">/ miesięcznie</span></div>
 	                    <ul class="rex-pricing-feature-list">
-	                        <li class="rex-pricing-feature">100 dokumentów</li>
-	                        <li class="rex-pricing-feature">5 pracowników</li>
+	                        <li class="rex-pricing-feature">30 dokumentów</li>
+	                        <li class="rex-pricing-feature">1 pracownik</li>
 	                       <!-- <li class="rex-pricing-feature">Forum access</li>
 	                        <li class="rex-pricing-feature">Support at $25/hour</li> -->
 	                    </ul>
@@ -1119,10 +1119,10 @@ zespołów muzycznych.</p>
 	                <div class="rex-table-content">
 		                <i class="fa fa-university"></i>
 	                    <h3 class="rex-table-title">Pakiet Premium</h3>
-	                    <div class="rex-pricing-price"><span class="pricing__currency">PLN</span>590<span class="pricing__period">/ miesięcznie</span></div>
+	                    <div class="rex-pricing-price"><span class="pricing__currency">PLN</span>500<span class="pricing__period">/ miesięcznie</span></div>
 	                    <ul class="rex-pricing-feature-list">
-	                        <li class="rex-pricing-feature">300 dokumentów</li>
-	                        <li class="rex-pricing-feature">10 pracowników</li>
+	                        <li class="rex-pricing-feature">100 dokumentów</li>
+	                        <li class="rex-pricing-feature">5 pracowników</li>
 	                       <!-- <li class="rex-pricing-feature">Forum access</li>
 	                        <li class="rex-pricing-feature">Support at $25/hour</li> -->
 	                    </ul>
@@ -1142,10 +1142,10 @@ zespołów muzycznych.</p>
 	                <div class="rex-table-content">
 		                <i class="fa fa-usd rex-feature-icon"></i>
 	                    <h3 class="rex-table-title">Pakiet Basic+</h3>
-	                    <div class="rex-pricing-price"><span class="pricing__currency">PLN</span>500<span class="pricing__period">/ miesięcznie</span></div>
+	                    <div class="rex-pricing-price"><span class="pricing__currency">PLN</span>300<span class="pricing__period">/ miesięcznie</span></div>
 	                    <ul class="rex-pricing-feature-list">
-	                        <li class="rex-pricing-feature">10 dokumentów</li>
-	                        <li class="rex-pricing-feature">1 pracownik</li>
+	                        <li class="rex-pricing-feature">5 dokumentów</li>
+	                        <li class="rex-pricing-feature">bez pracowników</li>
 	                       <!-- <li class="rex-pricing-feature">Forum access</li>
 	                        <li class="rex-pricing-feature">Support at $25/hour</li> -->
 	                    </ul>
@@ -1158,10 +1158,10 @@ zespołów muzycznych.</p>
 	                <div class="rex-table-content">
 		                <i class="fa fa-balance-scale"></i>
 	                    <h3 class="rex-table-title">Pakiet Standard+</h3>
-	                    <div class="rex-pricing-price"><span class="pricing__currency">PLN</span>1000<span class="pricing__period">/ miesięcznie</span></div>
+	                    <div class="rex-pricing-price"><span class="pricing__currency">PLN</span>500<span class="pricing__period">/ miesięcznie</span></div>
 	                    <ul class="rex-pricing-feature-list">
-	                        <li class="rex-pricing-feature">100 dokumentów</li>
-	                        <li class="rex-pricing-feature">5 pracowników</li>
+	                        <li class="rex-pricing-feature">30 dokumentów</li>
+	                        <li class="rex-pricing-feature">1 pracownik</li>
 	                       <!-- <li class="rex-pricing-feature">Forum access</li>
 	                        <li class="rex-pricing-feature">Support at $25/hour</li> -->
 	                    </ul>
@@ -1174,10 +1174,10 @@ zespołów muzycznych.</p>
 	                <div class="rex-table-content">
 		                <i class="fa fa-university"></i>
 	                    <h3 class="rex-table-title">Pakiet Premium+</h3>
-	                    <div class="rex-pricing-price"><span class="pricing__currency">PLN</span>3000<span class="pricing__period">/ miesięcznie</span></div>
+	                    <div class="rex-pricing-price"><span class="pricing__currency">PLN</span>1000<span class="pricing__period">/ miesięcznie</span></div>
 	                    <ul class="rex-pricing-feature-list">
-	                        <li class="rex-pricing-feature">300 dokumentów</li>
-	                        <li class="rex-pricing-feature">20 pracowników</li>
+	                        <li class="rex-pricing-feature">100 dokumentów</li>
+	                        <li class="rex-pricing-feature">5 pracowników</li>
 	                       <!-- <li class="rex-pricing-feature">Forum access</li>
 	                        <li class="rex-pricing-feature">Support at $25/hour</li> -->
 	                    </ul>
