nowa opinia klienta, Paulina Pabis

--- a/index.html
+++ b/index.html
@@ -774,12 +774,12 @@ zespołów muzycznych.</p>
 						  <div class="rx-active">
 						  	<!-- testimonial img -->
 								<div class="rex-content-img">
-									<img src="img/rex-testimonial-img-1.png" alt="">
+									<img src="img/rex-testimonial-img-1.jpg" alt="">
 								</div>
 								<!-- End testimonial img -->
 
-								<h4><span>Paweł Placek, InfoTrans - doradztwo transportowe</span></h4>
-								<p>Z całą pewnością polecam usługi księgowe tej firmy, szczególnie firmom transportowym, które bez problemu znajdują tam mądre i proste rozwiązania</p>
+								<h4><span>Paulina Pabis, Fearless Sp. z o.o.</span></h4>
+								<p>Współpracując z biurem Ekspert mogę w końcu skupić się na swojej działalności, mając pewność, że urzędowe formalności spoczywają w kompetentnych rękach.</p>
 								<!-- <p>Miły zespół pełen zapału do pracy, życzliwości dla klienta, przy tym sprawnie realizujący zadania. Jestem zadowolony ze współpracy.</p>-->
 						  </div>
 						  <!-- end -->
